feat: Implement subjects and courses endpoint